fix: order numbers by numpad

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -24,6 +24,7 @@
 }
 .back-title {
     width: 50%;
-    margin: auto;
-    font-size: larger;
+    text-align: center;
+    margin-top: 40px;
+    font-size: x-large;
 }
