--- a/src/app/views/menu/menu.component.html
+++ b/src/app/views/menu/menu.component.html
@@ -1,8 +1,8 @@
 <main class="main">
     <div class="content">
-        <h1>Jogo de memória inclusivo</h1>
-        <div class="button">
-            <a class="iniciarJogo" href="/fase" routerLinkActive="active">Iniciar Jogo</a>
-        </div>
+        <h1>BLIND MEMORY</h1>
+        <button class="iniciarJogo" (click)="navigateTo('fase')"  routerLink="/fase" routerLinkActive="active">
+            Iniciar Jogo
+        </button>
     </div>
 </main>
