--- a/src/app/views/menu/menu.component.scss
+++ b/src/app/views/menu/menu.component.scss
@@ -1,31 +1,26 @@
 .content {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
+    align-items: center;
+    justify-content: center;
     background-color: lightskyblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1{
-    margin: 0px;
-    text-align: center;
+h1 {
+    font-size: 56px;
+    text-transform: uppercase;
 }
 
-.iniciarJogo{
-    font-style: normal;
+.iniciarJogo {
+    padding: 20px;
+    font-size: 32px;
+    background: white;
     color: black;
-    background-color: white;
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
-}
-
-.button{
-    margin-top: 20px;
-    background-color: white;
-    border-radius: 10px;
-    width: 100px;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    // display: flex;
-    // align-items: center;
+    border: none;
+    border-radius: 100px;
+    text-transform: uppercase;
+    font-weight: 700;
+    cursor: pointer;
 }
