--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
+}
+
+.back {
+  cursor: pointer;
 }
 
 .card-image{
@@ -23,8 +28,6 @@
     font-size: larger;
 }
 .back-title {
-    width: 50%;
-    text-align: center;
-    margin-top: 40px;
-    font-size: x-large;
+    font-size: 60px;
+    font-weight: 300;
 }
