--- a/src/app/views/menu/menu.component.scss
+++ b/src/app/views/menu/menu.component.scss
@@ -1,26 +1,48 @@
 .content {
+    display: grid;
+    background-color: #87CEFA;
+    height: 100vh;
+}
+
+.content-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     align-items: center;
     justify-content: center;
-    background-color: lightskyblue;
-    font-family: Arial, Helvetica, sans-serif;
+    gap: 20px;
+    max-width: 600px;
+    background: #fff;
+    border-radius: 20px;
+    margin: auto;
+    padding: 30px;
+}
+
+img {
+    width: 130px;
 }
 
 h1 {
     font-size: 56px;
     text-transform: uppercase;
+    margin: 0;
 }
 
-.iniciarJogo {
+p, ul {
+    margin: 0;
+}
+
+button {
     padding: 20px;
-    font-size: 32px;
-    background: white;
-    color: black;
+    font-size: 24px;
+    background: #4682B4;
+    color: #fff;
     border: none;
     border-radius: 100px;
     text-transform: uppercase;
     font-weight: 700;
     cursor: pointer;
+
+    &:hover {
+      opacity: 0.8;
+    }
 }
